# kedro-argo

./: CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  version-check.yml
argo-kedro/: README.md  pyproject.toml
argo-kedro/argo_kedro/framework/cli/: cli.py
argo-kedro/argo_kedro/framework/hooks/: argo_hook.py
argo-kedro/argo_kedro/pipeline/: __init__.py  fused_pipeline.py  node.py
argo-kedro/argo_kedro/runners/: fuse_runner.py
argo-kedro/argo_kedro/templates/: Dockerfile  argo.yml  argo_wf_spec.tmpl
argo-kedro/tests/cli/: test_cli.py
argo-kedro/tests/pipeline/: test_fused_pipeline.py
argo-test/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
argo-test/conf/base/: argo.yml  catalog.yml  globals.yml
argo-test/conf/cloud/: globals.yml
argo-test/src/argo_test/: __init__.py  __main__.py  settings.py
argo-test/src/argo_test/pipelines/data_processing/: pipeline.py
argo-test/src/argo_test/pipelines/data_science/: pipeline.py
argo-test/src/argo_test/pipelines/reporting/: pipeline.py
argo-test/templates/: argo-workflow-template.yml
kedro-argo/: LICENSE  MANIFEST.in  README.md  locally_building_guide.md  pyproject.toml
kedro-argo/argo_kedro/framework/cli/: cli.py
kedro-argo/argo_kedro/templates/: argo_wf_spec.tmpl
kedro-argo/kedro_argo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
kedro-argo/kedro_argo/framework/: cli.py
kedro-argo/kedro_argo/framework/cli/: cli.py
kedro-argo/kedro_argo/pipeline/: fused_pipeline.py
kedro-argo/kedro_argo/runners/: fuse_runner.py
kedro-argo/kedro_argo/templates/: argo_wf_spec.tmpl
kedro-argo/tests/cli/: test_cli.py
kedro-argo/tests/pipeline/: test_fused_pipeline.py
